# swc-plugin-react-const-elements

./: Cargo.toml  README.md
src/: const_decls.rs  immutable.rs  lib.rs  utils.rs
tests/: main.rs
